--- a/scr/index.html
+++ b/scr/index.html
@@ -170,7 +170,7 @@
       </section>
 
       <section class="price d-flex flex-column align-items-center justify-content-center" id="price">
-        <div class="container h-75 d-flex flex-column align-items-center">
+        <div class="price_box container w-50 h-75 d-flex flex-column align-items-center">
           <form action="" >
             <hr>
               <h2>Расчет стоимости</h2>
@@ -308,7 +308,8 @@
         </form>
           <div class="myLinks">
             <a href="https://vk.com/im?peers=-203472929_c151_155825712_c207_181128094_260237293" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/bboyhook.off/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://github.com/BboyHookOff" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
           </div>
         </div>
         </div>
