--- a/scr/index.html
+++ b/scr/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/keyframes.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/medias.css">
     <title>Visit0chka 2.0</title>
@@ -81,7 +82,23 @@
             <img src="img/subtitle_arrow.png" alt="">
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <input type="button" value="скачать резюме">
+          <input type="button" value="скачать резюме" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Уже скоро!</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p>Скоро моё резюме будет готово, и вы сможете скачать его. Сам уже жду с нетерпением. ))</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Окей</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         </div>
       </section>
@@ -126,17 +143,25 @@
           <div class="case">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleIndicators" class="case-slide carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/case1.png" class="d-block w-100" alt="...">
+                  <img data-src="img/case1.png" src="img/case1-low.jpg" class="d-block w-100 image-link" href="img/case1.png" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/case2.png" class="d-block w-100" alt="...">
+                  <img data-src="img/case2.png" src="img/case2-low.jpg" class="d-block w-100 image-link" href="img/case2.png" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img data-src="img/case3.png" src="img/case3-low.jpg" class="d-block w-100 image-link" href="img/case3.png" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img data-src="img/case4.png" src="img/case4-low.jpg" class="d-block w-100 image-link" href="img/case4.png" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
@@ -176,7 +201,7 @@
               <h2>Расчет стоимости</h2>
             <h3>ТИП САЙТА</h3>
             <div class="mb-3">
-              <select id="saitType" class="form-select" required aria-label="select example">
+              <select id="saitType" class="form-select" onchange="countUreWeb()" required aria-label="select example">
                 <option disabled selected>Выберите пункт...</option>
                 <option value="визитка">визитка</option>
                 <option value="портал">портал</option>
@@ -188,7 +213,7 @@
             </div>
             <h3>ДИЗАЙН</h3>
             <div class="mb-3">
-              <select id="saitDesign" class="form-select" required aria-label="select example">
+              <select id="saitDesign" class="form-select" onchange="countUreWeb()" required aria-label="select example">
                   <option disabled selected>Выберите пункт...</option>
                   <option value="классика">классика</option>
                   <option value="гранж">гранж</option>
@@ -200,7 +225,7 @@
             </div>
             <h3>АДАПТИВНОСТЬ</h3>
             <div class="mb-3">
-              <select id="saitAdapt" class="form-select" required aria-label="select example">
+              <select id="saitAdapt" class="form-select" onchange="countUreWeb()" required aria-label="select example">
               <option disabled selected>Выберите пункт...</option>
               <option value="ПК">ПК</option>
               <option value="Мобильные устройства">Мобильные устройства</option>
@@ -219,7 +244,7 @@
               </div>
             </div>
             <div class="case_btn row w-100 d-flex justify-content-center">
-              <p>Выберете все пункты, чтобы узнать примерную стоимость вашего проекта. Конечная цена обговаривается лично.</p>
+              <p>Выберите все пункты, чтобы узнать примерную стоимость вашего проекта. Конечная цена обговаривается лично.</p>
               <input type="button" value="Оставить заявку">
             </div>
           </form>
@@ -235,22 +260,22 @@
           <div class="statistics_container w-100 d-flex flex-column flex-md-row justify-content-evenly">
           <div class="statistic">
             <img src="img/smile_icon.png" alt="иконка">
-            <h2 class="clients"><b>0</b></h2>
+            <h2 class="clients"><b class="st_item" id="st1">0</b></h2>
             <span>счастливых клиентов</span>
           </div>
           <div class="statistic">
             <img src="img/tegg2_icon.png" alt="иконка">
-            <h2 class="workHours"><b>МАЛО</b></h2>
+            <h2 class="workHours"><b class="st_item" id="st2">0</b></h2>
             <span>часов работы</span>
           </div>
           <div class="statistic">
             <img src="img/checked_icon.png" alt="иконка">
-            <h2 class="progects"><b>2</b></h2>
+            <h2 class="progects"><b class="st_item" id="st3">0</b></h2>
             <span>проектов завершено</span>
           </div>
           <div class="statistic">
             <img src="img/goblet_icon.png" alt="иконка">
-            <h2 class="awards"><b>-100</b></h2>
+            <h2 class="awards"><b class="st_item" id="st4">0</b></h2>
             <span>наград получено</span>
           </div>
         </div>
@@ -258,14 +283,41 @@
       </section>
 
       <section class="reviews" id="reviews">
-        <div class="container d-flex flex-column align-items-center justify-content-center">
+        <div class="container h-100 d-flex flex-column">
           <div class="reviews-h">
             <h2>ОТЗЫВЫ</h2>
             <span>____</span>
           </div>
-          <img id="commentator__photo" src="img/user_icon.png" alt="Тут должна быть фотка коментатора">
-          <p id="comment">Всем привет, я мать Григория. Он показал мне как он создаёт файл индекс точка хтмл и я просто в шоке. Специалист каких поискать надо! Справедливо одобряю.</p>
-          <p id="commentator"><b>Екатерина,</b> родитель специалиста</p>
+
+
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active d-flex flex-column align-items-center">
+                <img src="img/user_icon.png" alt="Тут должна быть фотка коментатора">
+                <div class="comment d-flex align-items"><span>Всем привет, я мать Григория. Он показал мне как он создаёт файл индекс точка хтмл и я просто в шоке. Специалист каких поискать надо! Справедливо одобряю.</span></div>
+                <p class="d-flex align-items"><b>Екатерина,</b> родитель специалиста</p>
+              </div>
+              <div class="carousel-item d-flex flex-column align-items-center">
+                <img src="img/user_icon.png" alt="Тут должна быть фотка коментатора">
+                <div class="comment d-flex align-items"><span>И сказать нечего, всё четко и по делу! Молодец сына</span></div>
+                <p><b>Алексей,</b> законный отец</p>
+              </div>
+              <div class="carousel-item d-flex flex-column align-items-center">
+                <img src="img/user_icon.png" alt="Тут должна быть фотка коментатора">
+                <div class="comment d-flex align-items"><span>Отстой, переделывай!</span></div>
+                <p><b>kiler_terminator-228,</b> тупа хейтер</p>
+              </div>
+            </div>
+            <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselExampleFade"  data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Предыдущий</span>
+            </button>
+            <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#carouselExampleFade"  data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Следующий</span>
+            </button>
+        </div>
+
         </div>
       </section>
 
@@ -327,8 +379,9 @@
       </footer>
 
     </main>
-    <script type="text/javascript" src="js/script.js"></script>
-
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
 </html>
